wrap getdata function in a usecallback and try catch block to avoid crashes

--- a/src/output.css
+++ b/src/output.css
@@ -525,20 +525,16 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
 
 .mt-\[20px\] {
   margin-top: 20px;
-}
-
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
 }
 
 .block {
